--- a/playbooks/roles/web/tasks/main.yaml
+++ b/playbooks/roles/web/tasks/main.yaml
@@ -1,5 +1,6 @@
 ---
 # Install & Configure NGINX & Wordpress
 
+- include: configure-phpfpm.yaml
 - include: configure-wordpress.yaml
 - include: configure-nginx.yaml
