--- a/playbooks/roles/db0/tasks/main.yaml
+++ b/playbooks/roles/db0/tasks/main.yaml
@@ -1,30 +1,5 @@
 ---
-# This playbook will install MariaDB and create db user and give permissions.
+# Install mySQL and configure mySQL sourcedb for wordpress
 
-- name: Install MariaDB package
-  yum: name={{ item }} state=present
-  with_items:
-   - mariadb-server
-   - python3-pymysql
-#  - policycoreutils-python-utils
-#  - MySQL-python
-#  - libselinux-python
-#  - libsemanage-python
-
-- name: Configure SELinux to start mysql on any port
-  seboolean: name=mysql_connect_any state=true persistent=yes
-
-- name: Create Mysql configuration file
-  template: src=my.cnf.j2 dest=/etc/my.cnf
-  notify:
-  - restart mariadb
-
-- name: Create MariaDB log file
-  file: path=/var/log/mysqld.log state=touch owner=mysql group=mysql mode=0775
-
-- name: Start MariaDB Service
-  service: name=mariadb state=started enabled=yes
-
-- name: insert firewalld rule
-  firewalld: port={{ mysql_port }}/tcp permanent=true state=enabled immediate=yes
-  ignore_errors: yes
+- include: create-wordpress-db.yaml
+- include: configure-replication-sourcedb.yaml
