--- a/playbooks/roles/web/tasks/configure-nginx.yaml
+++ b/playbooks/roles/web/tasks/configure-nginx.yaml
@@ -1,14 +1,39 @@
 ---
-- name: Install nginx
-  yum: name=nginx state=present
+# Configure nginx stuff
 
-- name: Copy nginx configuration for wordpress
-  template: src=default.conf dest=/etc/nginx/conf.d/default.conf
-  notify: restart nginx
+- name: Configure NGINX and NGINX Unit to auto start and reload
+  shell: |
+    systemctl enable unit
+    systemctl enable nginx
+  become: yes
 
-- name: insert firewalld rule for nginx
-  firewalld: port={{ nginx_port }}/tcp permanent=true state=enabled immediate=yes
-  ignore_errors: yes
+- name: start unit app server
+  shell: systemctl start unit
 
-- name: http service state
-  service: name=nginx state=started enabled=yes
+- name: Update Nginx Unit Config
+  shell: curl -X PUT --data-binary @/usr/share/doc/unit-php/examples/unit.config --unix-socket /run/control.unit.sock http://localhost/config
+  become: yes
+
+- name: Copy nginx default.conf to server
+  copy:
+    src: default.conf
+    dest: /etc/nginx/conf.d
+    owner: root
+    group: root
+    mode: 0755
+
+- name: Add ip as nginx server_name to default.conf
+  lineinfile:
+    dest: /etc/nginx/conf.d/default.conf
+    regexp: '^(.*)server_name localhost 127.0.0.1;(.*)$'
+    line:     server_name localhost {{ app_name }} {{ ansible_host }};
+    backrefs: yes
+
+- name: Update nginx with wordpress config
+  shell: curl -X PUT --data-binary @/var/www/wordpress/wordpress.config --unix-socket /run/control.unit.sock http://localhost/config
+  become: yes
+
+- name: Restart nginx server
+  shell: service nginx restart
+
+
