--- a/playbooks/roles/web/tasks/configure-wordpress.yaml
+++ b/playbooks/roles/web/tasks/configure-wordpress.yaml
@@ -1,60 +1,89 @@
 ---
-- name: Download WordPress
-  get_url: url=http://wordpress.org/wordpress-{{ wp_version }}.tar.gz dest=/srv/wordpress-{{ wp_version }}.tar.gz
-           sha256sum={{ wp_sha256sum }}
+# Configure wordpress stuff
+#- name: Create Wordpress Directory
+#  file:
+#    path: /var/www/
+#    state: directory
+#    owner: www-data
+#    group: www-data
+#    mode: 0775
+#    recurse: yes
 
-- name: Extract archive
-  command: chdir=/srv/ /bin/tar xvf wordpress-{{ wp_version }}.tar.gz creates=/srv/wordpress
+- name: Download and untar Wordpress distro
+  unarchive:
+    src: http://wordpress.org/latest.tar.gz
+    dest: /var/www
+    remote_src: yes
 
-- name: Add group "wordpress"
-  group: name=wordpress
+- name: Copy wp-config.php to server
+  copy:
+    src: wp-config.php.txt
+    dest: /var/www/wordpress/wp-config.php
+    owner: www-data
+    group: www-data
+    mode: 0755
 
-- name: Add user "wordpress"
-  user: name=wordpress group=wordpress home=/srv/wordpress/
+- name: Copy wordpress.config to server
+  copy:
+    src: wordpress.conf
+    dest: /var/www/wordpress/wordpress.config
+    owner: root
+    group: root
+    mode: 0755
 
-- name: Fetch random salts for WordPress config
-  local_action: command curl https://api.wordpress.org/secret-key/1.1/salt/
-  register: "wp_salt"
-  become: no
+- name: Copy db-config
+  copy:
+    src: db-config.php.txt
+    dest: /var/www/wordpress/db-config.php
+    owner: www-data
+    group: www-data
+    mode: 0755
 
-- name: Create WordPress database
-  mysql_db: name={{ wp_db_name }} state=present
+- name: Copy db-php
+  copy:
+    src: db.php.txt
+    dest: /var/www/wordpress/wp-content/db.php
+    owner: www-data
+    group: www-data
+    mode: 0755
 
-- name: Create WordPress database user
-  mysql_user: name={{ wp_db_user }} password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
+- name: Modify wp-config for source db
+  lineinfile:
+    dest: /var/www/wordpress/wp-config.php
+    regexp: ^(.*)define\( 'DB_HOST', '\b\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\b'\);(.*)$
+    line: "define( 'DB_HOST', '{{ source_db }}');"
 
-- name: Copy WordPress config file
-  template: src=wp-config.php dest=/srv/wordpress/
+- name: Add slave_db_host to wp-config
+  lineinfile:
+    dest: /var/www/wordpress/wp-config.php
+    regexp:  ^(.*)define\( 'SLAVE_DB_HOST', '\b\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\b'\);(.*)$
+    line: "define( 'SLAVE_DB_HOST', '{{ replica_db }}');"
 
-- name: Change ownership of WordPress installation
-  file: path=/srv/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes
+- name: Set database password in wp-config
+  lineinfile:
+    dest: /var/www/wordpress/wp-config.php
+    regex: ^(.*)define\( 'DB_PASSWORD', 'dbpassword' \);(.*)$
+    line: "define( 'DB_PASSWORD', '{{ dbpassword }}' );"
 
-- name: install SEManage
-  yum: pkg=policycoreutils-python state=present
+- name: Set wordpress file permissions
+  shell: |
+    chown -R www-data:www-data /var/www/wordpress
+    find /var/www/wordpress -type d -exec chmod g+s {} \;
+    chown -R www-data:www-data /var/www/wordpress
+    chmod g+w /var/www/wordpress/wp-content
+    chmod -R g+w /var/www/wordpress/wp-content/themes
+    chmod -R g+w /var/www/wordpress/wp-content/plugins
+  become: yes
 
-- name: set the SELinux policy for the Wordpress directory
-  command: semanage fcontext -a -t httpd_sys_content_t "/srv/wordpress(/.*)?"
+- name: Add LogDNA tag for webapp
+  shell: logdna-agent -t webapp
+  become: yes
 
-- name: set the SELinux policy for wp-config.php
-  command: semanage fcontext -a -t httpd_sys_script_exec_t "/srv/wordpress/wp-config\.php"
+- name: restart LogDNA
+  shell: service logdna-agent restart
+  become: yes
 
-- name: set the SELinux policy for wp-content directory
-  command: semanage fcontext -a -t httpd_sys_rw_content_t "/srv/wordpress/wp-content(/.*)?"
-
-- name: set the SELinux policy for the *.php files
-  command: semanage fcontext -a -t httpd_sys_script_exec_t "/srv/wordpress/.*\.php"
-
-- name: set the SELinux policy for the Upgrade directory
-  command: semanage fcontext -a -t httpd_sys_rw_content_t "/srv/wordpress/wp-content/upgrade(/.*)?"
-
-- name: set the SELinux policy for the Uploads directory
-  command: semanage fcontext -a -t httpd_sys_rw_content_t "/srv/wordpress/wp-content/uploads(/.*)?"
-
-- name: set the SELinux policy for the wp-includes php files
-  command: semanage fcontext -a -t httpd_sys_script_exec_t "/srv/wordpress/wp-includes/.*\.php"
-
-- name: set the SELinux on all the Files
-  command: restorecon -Rv /srv/wordpress
-
-- name: Start php-fpm Service
-  service: name=php-fpm state=started enabled=yes
+- name: Install & Configure sysdig on Webapp server
+  shell: |
+      curl -sL https://ibm.biz/install-sysdig-agent | sudo bash -s -- --access_key {{ sysdig_key }}  -c ingest.us-south.monitoring.cloud.ibm.com --collector_port 6443 --secure true -ac "sysdig_capture_enabled: false" --tags role:webapp,location:us-south
+  become: yes
